--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "challenge-owinteractive",
   "version": "1.0.0",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "node --watch src/index.js",
+    "dev": "tsx --watch src/server.ts",
     "build": "tsc --build"
   },
   "author": "Eduardo Sousa",
@@ -12,6 +12,17 @@
   "description": "Desafio Ow Interactive - Backend",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.5",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.2.1",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "prisma": "^6.2.1",
+    "zod": "^3.24.1"
   }
 }
